tests/error/half_parenthesized_comma_expression_in_static_if.c
// fail "Expected ')' in '#if' argument."

// This used to crash!
#if (1, 
        
